Minor changes; add util